--- a/exercise.css
+++ b/exercise.css
@@ -61,9 +61,18 @@
   background-color: #aaaaaa;
 }
 
-@media screen and (max-width: 768) {
+@media screen and (max-width: 768px) {
+  .main {
+    width: 100%;
+    display: block;
+  }
 
+  .box {
+    width: 90%;
+    margin: 0 5% 20px 5%;
+  }
 
-
-  
+  .box :nth-child(3) {
+    margin-bottom: 0;
+  }
 }
